edited some words, fixed strange stretching of buttons on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1935,7 +1935,7 @@ button,
   color: #ffffff !important;
   cursor: pointer;
   display: inline-block;
-  font-size: 0.6em;
+  font-size: 0.7em;
   font-weight: bold;
   height: calc(4.75em + 2px);
   letter-spacing: 0.25em;
@@ -2855,7 +2855,7 @@ ul.actions.fit.stacked {
   }
 
   ul.actions:not(.fixed) li > * {
-    width: 100%;
+    /* width: 100%; */
   }
 
   ul.actions:not(.fixed) li:first-child {
